# ril-simple-icons

./: .gitignore  LICENSE.md  README.md  generate.py  package-lock.json  package.json  pyproject.toml  rollup.config.js  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.js
.github/workflows/: build.yml  publish.yml
rpk/: app.py  base.py  paths.py  pkg.py  utils.py
rpk/templates/: icon.tsx.jinja  index.ts.jinja
templates/: icon.tsx.jinja  index.ts.jinja
